More tempalte changes

--- a/latex_template/homework.tex
+++ b/latex_template/homework.tex
@@ -13,8 +13,8 @@
 
 \begingroup
 \centering
-\LARGE CPSC 370: Introduction To Computer Cryptology\\
-\LARGE Hands on Exercise 1\\[0.5em]
+\LARGE CPSC 320: Topics in Computer Science\\[0.5em]
+\LARGE Homework Assignment\\[0.5em]
 \large \today\\[0.5em]
 \large Aiden Rivera\par
 \endgroup
